feat: implement tag endpoints
